Adding more html pages
Adding about me and resume page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,20 +4,20 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css" />
-	<title>Haris Al Sheikh - Home</title>
+	<title>Haris Al Sheikh - Resume</title>
 </head>
 
 <body>
     <nav>
         <ul class="navigation">
             <li><a href="#home">Home</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
     <div class="main">
         <h1 class="headline">Hi, I'm Haris Al Sheikh</h1>
-        <p>This page has been viewed </p>
+        <p class="homepage">Welcome to my website, this page has been viewed</p>
     </div>
 </body>
 </html>
