--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,7 +17,7 @@
     </nav>
     <div class="main">
         <h1 class="headline">Hi, I'm Haris Al Sheikh</h1>
-        <p class="homepage"></p>Welcome to my website, this page has been viewed <a id="counter"></a> times.</p>
+        <p class="homepage"></p>Welcome to my website, this page has been viewed <a id="counter"></a> times - still in progress. still</p>
     </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
