--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Frontend/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
 	<title>Haris Al Sheikh - Resume</title>
 </head>
 
@@ -17,8 +17,8 @@
     </nav>
     <div class="main">
         <h1 class="headline">Hi, I'm Haris Al Sheikh</h1>
-        <p class="homepage"></p>Welcome to my website, this page has been viewed <a id="counter"></a> times - still in progress. still</p>
+        <p class="homepage"></p>Welcome to my website, this page has been viewed <a id="counter"></a> times - development still in progress. still</p>
     </div>
-    <script type="text/javascript" src="/Frontend/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
